--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>后台主页</title>
     <!-- 导入 layui 的样式表 -->
-    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css" />
     <!-- layui 图标库 -->
     <link rel="stylesheet" href="./assets/fonts/iconfont.css">
     <link rel="stylesheet" href="./assets/css/index.css">
@@ -26,9 +26,9 @@
                         <span class="text-avatar">A</span> 个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="./user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="./user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="./user_pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -67,13 +67,14 @@
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料</a>
+                                <a href="./user_info.html" target="fm"><i class="layui-icon layui-icon-app"></i>基本资料</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a>
+                                <a href="./user_avatar.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>更换头像</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>重置密码</a>
+                                <a href="./user_pwd.html" target="fm"><i class="layui-icon layui-icon-app"></i>重置密码</a>
                             </dd>
                         </dl>
                     </li>
@@ -93,7 +94,7 @@
     </div>
 </body>
 
-<script src="/assets/lib/layui/layui.all.js"></script>
+<script src="./assets/lib/layui/layui.all.js"></script>
 <script src="./assets/lib/jquery.js"></script>
 
 <script>
