--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                                 <a href="./art_cate.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章类别</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a>
+                                <a href="./art_list.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章列表</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发布文章</a>
+                                <a href="./art_pub.html" target="fm"><i class="layui-icon layui-icon-app"></i>发布文章</a>
                             </dd>
                         </dl>
                     </li>
@@ -89,7 +89,7 @@
 
         <div class="layui-footer">
             <!-- 底部固定区域 -->
-            © layui.com - 底部固定区域
+            © layui - 底部固定区域
         </div>
     </div>
 </body>
