--- a/home/dashboard.html
+++ b/home/dashboard.html
@@ -58,6 +58,7 @@
     </div>
 
     <script>
+        // init初始化   写option数据 使用数据setoption
         var oChart = echarts.init(document.getElementById('curve_show'));
         var aList_all = [{
             'count': 36,
